fix for repair and construction panel alignment

--- a/views/components/main/assets/construction-panel.css
+++ b/views/components/main/assets/construction-panel.css
@@ -1,4 +1,6 @@
 .MainView .kdock-panel {
+  display: flex;
+  flex-wrap: wrap;
   flex-grow: 1;
   height: 80px;
   justify-content: space-between;
